portfolio/src/components/home/About.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Ubuntu:wght@300;400;700&display=swap');

.full-screen {
    width: 100%;
    height: 80vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.description-about{
    font-family: "Oswald", sans-serif;
    font-weight: 700;
    font-size: 135%;
    line-height: 3rem;
    letter-spacing: 3px;
    padding: 2rem 7%;
    margin-top: 1rem;
    padding-bottom: 0;
}
.About{
    max-height: 180vh !important;
    background-color: black !important;
    overflow: hidden;
}
.card{
    text-align: center;
    letter-spacing: 2px;
    color: white !important;
    z-index: 99;
    border-radius: 10px;
    width: 70%;
    height: 100vh;
    background-color: rgb(11, 11, 11);
    -webkit-box-shadow: 0px 0px 208px 0px rgba(255,255,255,0.8);
-moz-box-shadow: 0px 0px 208px 0px rgba(255,255,255,0.8);
box-shadow: 0px 0px 1208px 0px rgba(255,255,255,0.8);
    margin-bottom: 0;
    padding-bottom: 0;
}
.details-part2{
    margin-bottom: 0;
}
.hello{
    margin-top: 2rem;
    padding-top: 2rem;
    letter-spacing: 5px;
    color: rgb(171, 168, 168);
    font-family: "Oswald", sans-serif;;
}
nav {
    position: -webkit-sticky;
    position: sticky !important;
    top: 20px !important;
    width: 100% !important;
  }
.line-1{
    letter-spacing: 10px;
    color: rgb(171, 168, 168);
    width: 20.18em;
    margin: 0 auto;
    border-right: 2px solid rgba(255,255,255,.75);
    font-size: 180%;
    white-space: nowrap;
    overflow: hidden;
}
.line-2{
    letter-spacing: 5px;
    color: rgb(171, 168, 168);
    width: 80%;
    margin: 0 auto;
    font-size: 180%;
    text-align: center;
}
.anim-typewriter{
    width:0;
    animation: typewriter 5s steps(35) 1s 1 normal both,
    blinkTextCursor 500ms steps(35) infinite normal;
}

.scroll{
    margin-top: 2rem;
    letter-spacing: 3px;
    color: rgb(171, 168, 168);
    animation: displayBlock 7s ease-in;
    margin-bottom: 20%;
}
.card .transition-button{
    font-family: 'Ubuntu', sans-serif;
    background-color: white;
    height: 3rem;
    text-align: center;
    line-height: 0;
    color: rgb(46, 45, 45);
    position: relative;
    top: -10%;
    letter-spacing: 2px;
}
.card .transition-button:hover{
    animation: none !important;;
}
@keyframes displayBlock {
    from{
        opacity: 0;
    }
    to{
        opacity: 1;
    }
}
@keyframes typewriter{
    from{
        width: 0;
    }
    to{
        width: 31rem;
    }
}
@keyframes blinkTextCursor{
    from{
        border-right-color: rgba(255,255,255,.75);
    }
    to{
        border-right-color: transparent;
    }
}
@media (max-width: 800px) {
    .About{
        max-height: 200vh !important;
        overflow: hidden;
    }
    .card{
        width: 94%;
    }
    .line-1{
        font-size: 1.15rem;
        letter-spacing: 5px;
    }
    .details-part{
        margin-bottom: 6rem;
    }
    .description-about{
        padding: 1rem;
        font-size: 110%;
        letter-spacing: 2px;
        font-weight: 400;
        line-height: 1.7rem;
    }
    .hello{
        margin-top: 1rem;
        letter-spacing: 3px;
        font-weight: 400;
        padding-top: 1rem;
    }
    @keyframes typewriter{
        from{
            width: 0;
        }
        to{
            width: 19rem;
        }
    }
}
@media (min-width: 1280px) {
    .description-about{
        padding: 2rem 10rem;
    }
}

